Fixed: Edit Photo icon not showing

--- a/3. Frontend + Backend/Demo Drop System by Esther A M/src/main/resources/static/css/restyle.css
+++ b/3. Frontend + Backend/Demo Drop System by Esther A M/src/main/resources/static/css/restyle.css
@@ -150,11 +150,12 @@ h2{
     position: relative;
 }
 .edit-icon{
-    width: 20px;
+    width: 21px;
     position: absolute;
-    top: 305px;
-    right: 680px;
+    top: -20px;
+    right: 14px;
     opacity: 0.4;
+    cursor: pointer;
 }
 
 
